operator/pkg/gateway-api/testdata/gateway/listenerset-valid-with-invalid-gateway-listener/output/valid-listenerset-only.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  creationTimestamp: null
  name: valid-listenerset-only
  namespace: gateway-conformance-infra
  resourceVersion: "1000"
spec:
  gatewayClassName: cilium
  allowedListeners:
    namespaces:
      from: Same
  listeners:
    - allowedRoutes:
        kinds:
          - kind: InvalidRoute
        namespaces:
          from: Same
      name: invalid-http
      port: 80
      protocol: HTTP
status:
  conditions:
    - lastTransitionTime: "2025-07-01T00:00:00Z"
      message: No Accepted Listeners
      reason: ListenersNotValid
      status: "False"
      type: Accepted
    - lastTransitionTime: "2025-07-01T00:00:00Z"
      message: No Accepted Listeners
      reason: ListenersNotValid
      status: "False"
      type: Programmed
  listeners:
    - attachedRoutes: 0
      conditions:
        - lastTransitionTime: "2025-07-01T00:00:00Z"
          message: Unsupported Route Kinds in allowedRoutes.kinds
          reason: InvalidRouteKinds
          status: "False"
          type: ResolvedRefs
        - lastTransitionTime: "2025-07-01T00:00:00Z"
          message: "Listener not valid. None of the Allowed Route Kinds are supported."
          reason: Invalid
          status: "False"
          type: Accepted
        - lastTransitionTime: "2025-07-01T00:00:00Z"
          message: Address not ready yet
          reason: Pending
          status: "False"
          type: Programmed
      name: invalid-http
      supportedKinds: []
